<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.rigot.macavealpha.ModifyVinActivity">

    <EditText
        android:id="@+id/etNom"
        android:layout_width="fill_parent"
        android:layout_columnSpan="2"
        android:hint="@string/nom"
        android:maxLines="1">

        <requestFocus />
    </EditText>

    <Spinner
        android:id="@+id/spCategorie"
        android:layout_width="fill_parent"
        android:layout_columnSpan="2" />

    <Spinner
        android:id="@+id/spCouleur"
        android:layout_width="fill_parent"
        android:layout_columnSpan="2" />

    <Spinner
        android:id="@+id/spAppellation"
        android:layout_width="fill_parent"
        android:layout_columnSpan="2"
        android:prompt="@string/appellation" />

    <TextView
        android:id="@+id/tvAnnee"
        android:ems="5"
        android:text="@string/annee" />

    <EditText
        android:id="@+id/etAnnee"
        android:layout_width="70dp"
        android:ems="10"
        android:inputType="number"
        android:maxLength="4"></EditText>

    <TextView
        android:id="@+id/tvBoire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boire"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etDebutBoire"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:maxLength="4" />

        <TextView
            android:id="@+id/tvEtBoire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chaine_et"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/etFinBoire"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:maxLength="4" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/service"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etDebutTemp"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:maxLength="4" />

        <TextView
            android:id="@+id/tvEtTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chaine_et"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/etFinTemp"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:maxLength="4" />

        <TextView
            android:id="@+id/tvTempDegre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/degreC"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvNote"
        android:ems="5"
        android:text="@string/note" />

    <RatingBar
        android:id="@+id/rbNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:max="5"
        android:numStars="5" />

    <TextView
        android:id="@+id/tvDegre"
        android:ems="5"
        android:text="Degré" />

    <EditText
        android:id="@+id/etDegre"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:maxLength="4" />

</GridLayout>
